feat(api-gateway): add retry and transport options to ApiGatewayConfig
- Enhanced ApiGatewayConfig to support retry strategies and transport options.
- Introduced RetryOptions and TransportOptions types for better configuration.
- Updated constructors and interfaces to accommodate new options.

feat(internal-events): implement redis max retries configuration

- Added redisMaxRetriesPerRequest option to InternalEventsOptions.
- Updated InternalEventsRedisService to utilize the new configuration for retry logic.

fix(gorush): update Gorush API client to handle health checks and metrics

- Improved GorushService to unwrap payloads from API responses.
- Enhanced health check method to include timestamp and structured response.
- Updated metrics fetching methods to ensure proper data handling.

style(logger): change verbose logging to debug level

- Adjusted LoggerService to use console.debug for verbose messages.

refactor(gorush): restructure Gorush DTOs for better serialization

- Applied class-transformer decorators to Gorush DTOs for improved serialization.
- Ensured all properties are exposed correctly for API responses.

chore(deps): update dependencies and clean up unused imports

- Removed unused imports and updated dependency versions across the project.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,8 +6,11 @@
   // Keep script output readable in the terminal.
   "npm.runSilent": false,
   "cSpell.words": [
+    "amqp",
     "AVAXCCHAIN",
     "AVAXTEST",
+    "dpage",
+    "healthz",
     "MAXLEN",
     "mhdw",
     "Ohlcv",
