--- a/docker-compose.relational.test.yaml
+++ b/docker-compose.relational.test.yaml
@@ -29,7 +29,7 @@ services:
 
   #  Uncomment to use redis
   redis:
-    image: redis:8-alpine
+    image: redis:8.4-alpine
     hostname: redis
     env_file:
       - env-example-relational
@@ -47,9 +47,9 @@ services:
         condition: service_started
       redis:
         condition: service_started
-    expose:
-      - 3000
-      - 4000
+    ports:
+      - 3000:3000
+      - 4000:4000
     env_file:
       - env-example-relational
     volumes:
@@ -59,3 +59,4 @@ services:
 networks:
   default:
     name: next-block-net
+    external: true
