--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "nodemailer": "7.0.7",
     "passport": "0.7.0",
     "passport-anonymous": "1.0.1",
+    "passport-http-bearer": "^1.0.1",
     "passport-jwt": "4.0.1",
     "pg": "8.16.3",
     "redis": "^4.7.1",
@@ -152,6 +153,7 @@
     "@types/multer": "2.0.0",
     "@types/node": "22.19.1",
     "@types/passport-anonymous": "1.0.5",
+    "@types/passport-http-bearer": "^1.0.42",
     "@types/passport-jwt": "4.0.1",
     "@types/socket.io": "^3.0.1",
     "@types/socket.io-client": "^1.4.36",
