--- a/.github/workflows/sync-private-repo.yml
+++ b/.github/workflows/sync-private-repo.yml
@@ -1,4 +1,4 @@
-name: SYNC PRIVATE REPO
+name: Sync public repo to org private repo
 
 on:
   push:
@@ -8,18 +8,45 @@ on:
 permissions:
   contents: read
 
+concurrency:
+  group: sync-private-main
+  cancel-in-progress: true
+
 jobs:
   mirror:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout source repository
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Push main (no force)
+      - name: Validate token exists
         env:
           TOKEN: ${{ secrets.ORG_REPO_TOKEN }}
         run: |
-          TARGET="https://x-access-token:${TOKEN}@github.com/Metapolitanltd/VeroVaultBackend.git"
-          git remote add target "$TARGET"
+          if [ -z "$TOKEN" ]; then
+            echo "ERROR: ORG_REPO_TOKEN is empty or unavailable"
+            exit 1
+          fi
+
+      - name: Diagnostic auth check to target repo
+        env:
+          TOKEN: ${{ secrets.ORG_REPO_TOKEN }}
+        run: |
+          git ls-remote "https://x-access-token:${TOKEN}@github.com/Metapolitanltd/VeroVaultBackend.git"
+
+      - name: Add target remote
+        env:
+          TOKEN: ${{ secrets.ORG_REPO_TOKEN }}
+        run: |
+          git remote add target "https://x-access-token:${TOKEN}@github.com/Metapolitanltd/VeroVaultBackend.git"
+
+      - name: Push main branch (safe mode, no force)
+        run: |
           git push target main:main
+
+      - name: Push tags (optional)
+        run: |
+          git push target --tags
