--- a/.github/workflows/docker-e2e.yml
+++ b/.github/workflows/docker-e2e.yml
@@ -1,4 +1,4 @@
-name: NestJS API CI
+name: Docker E2E Test
 
 on:
   push:
@@ -16,14 +16,22 @@ jobs:
       # <database-relational-block>
       - name: Run e2e tests for NestJS with TypeORM
         id: relational
-        run: docker compose -f docker-compose.relational.ci.yaml --env-file env-example-relational -p ci-relational up --build --exit-code-from app
+        run: docker compose -f docker-compose.relational.ci.yaml --env-file env-example-relational -p ci-relational up --build --exit-code-from api
 
       - name: Copy prod.log from container to host
         if: ${{ failure() && steps.relational.conclusion == 'failure' }}
-        run: docker cp ci-relational-app-1:/usr/src/app/prod.log .
+        run: docker cp ci-relational-api-1:/usr/src/app/prod.log .
       # </database-relational-block>
 
-      
+      # <database-document-block>
+      - name: Run e2e tests for NestJS with Mongoose
+        id: document
+        run: docker compose -f docker-compose.document.ci.yaml --env-file env-example-document -p ci-document up --build --exit-code-from api
+
+      - name: Copy prod.log from container to host
+        if: ${{ failure() && steps.document.conclusion == 'failure' }}
+        run: docker cp ci-document-api-1:/usr/src/app/prod.log .
+      # </database-document-block>
 
       - name: Upload prod.log to artifacts for debugging
         if: failure()
