ci: update commit

--- a/.github/workflows/sync-master-repo.yml
+++ b/.github/workflows/sync-master-repo.yml
@@ -109,7 +109,7 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
           git add -A
-          git commit -m "chore(sync): mirror public ${PUBLIC_OWNER}/${PUBLIC_REPO}@${PUBLIC_BRANCH} (preserve private workflows)" || echo "No changes to commit"
+          git commit -m "chore(sync): Sync from master"
 
           git branch -M "${PRIVATE_BRANCH}"
           git remote add origin "https://x-access-token:${GH_TOKEN}@github.com/${PRIVATE_OWNER}/${PRIVATE_REPO}.git"
