--- a/.github/workflows/sync-master-repo.yml
+++ b/.github/workflows/sync-master-repo.yml
@@ -109,7 +109,11 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
           git add -A
-          git commit -m "chore(sync): Sync from master"
+          if git diff --cached --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "chore(sync): update repository state (preserve workflows)"
+          fi
 
           git branch -M "${PRIVATE_BRANCH}"
           git remote add origin "https://x-access-token:${GH_TOKEN}@github.com/${PRIVATE_OWNER}/${PRIVATE_REPO}.git"
