--- a/.github/workflows/sync-master-repo.yml
+++ b/.github/workflows/sync-master-repo.yml
@@ -112,7 +112,7 @@ jobs:
           if git diff --cached --quiet; then
             echo "No changes to commit"
           else
-            git commit -m "chore(sync): update repository state (preserve workflows)"
+            git commit -m "chore(sync): sync master repo"
           fi
 
           git branch -M "${PRIVATE_BRANCH}"
