chore!: rename project identifiers from next-block to vault
- update repository/workflow metadata and contributors config to use `vault`
- rename Docker Compose project, containers, volumes, and network to `vault-*`
- rename PM2 process names from `next-block-*` to `vault-*`
- update app default name and home response example to `vault`

BREAKING CHANGE: runtime resource names changed from `next-block-*` to `vault-*` (Docker/PM2).

--- a/.github/workflows/sync-master-repo.yml
+++ b/.github/workflows/sync-master-repo.yml
@@ -17,7 +17,7 @@ jobs:
 
     env:
       PUBLIC_OWNER: amirtaherkhani
-      PUBLIC_REPO: next-block
+      PUBLIC_REPO: vault
       PUBLIC_BRANCH: main
 
       PRIVATE_OWNER: Metapolitanltd
