--- a/package.json
+++ b/package.json
@@ -55,16 +55,16 @@
     "commands": "npx ntl",
     "app:kill": "sudo kill -9 $(sudo lsof -t -i:3000)",
     "postinstall": "husky",
-    "pm2:start:dev": "pm2 start npm --name next-block-dev -- run start:dev",
-    "pm2:start:swc": "pm2 start npm --name next-block-dev -- run start:swc",
-    "pm2:start:prod": "pm2 start dist/main.js --name next-block-prod",
-    "pm2:restart:dev": "pm2 restart next-block-dev",
-    "pm2:restart:prod": "pm2 restart next-block-prod",
-    "pm2:stop:dev": "pm2 stop next-block-dev",
-    "pm2:stop:prod": "pm2 stop next-block-prod",
-    "pm2:delete:dev": "pm2 delete next-block-dev",
-    "pm2:delete:prod": "pm2 delete next-block-prod",
-    "pm2:logs": "pm2 logs next-block-dev",
+    "pm2:start:dev": "pm2 start npm --name vault-dev -- run start:dev",
+    "pm2:start:swc": "pm2 start npm --name vault-dev -- run start:swc",
+    "pm2:start:prod": "pm2 start dist/main.js --name vault-prod",
+    "pm2:restart:dev": "pm2 restart vault-dev",
+    "pm2:restart:prod": "pm2 restart vault-prod",
+    "pm2:stop:dev": "pm2 stop vault-dev",
+    "pm2:stop:prod": "pm2 stop vault-prod",
+    "pm2:delete:dev": "pm2 delete vault-dev",
+    "pm2:delete:prod": "pm2 delete vault-prod",
+    "pm2:logs": "pm2 logs vault-dev",
     "pm2:list": "pm2 list",
     "pm2:save": "pm2 save"
   },
