--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "typeorm": "env-cmd ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "typeorm": "env-cmd --no-override ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "migration:generate": "npm run typeorm -- --dataSource=src/database/data-source.ts migration:generate",
     "postmigration:generate": "npm run lint -- --fix",
     "migration:create": "npm run typeorm -- migration:create",
@@ -33,40 +33,16 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "env-cmd jest --config ./test/jest-e2e.json",
-    "test:e2e:relational:docker": "docker compose -f docker-compose.relational.test.yaml --env-file env-example-relational -p tests up -d --build && docker compose -f docker-compose.relational.test.yaml -p tests exec api /opt/wait-for-it.sh -t 0 localhost:3000 -- npm run test:e2e -- --watchAll --runInBand && docker compose -f docker-compose.relational.test.yaml -p tests down && docker compose -p tests rm -svf",
+    "test:e2e": "env-cmd --no-override jest --config ./test/jest-e2e.json",
+    "test:e2e:relational:docker": "bash -lc 'test -f .env || cp env-example-relational .env; docker network inspect ${VAULT_DOCKER_NETWORK:-vault-net} >/dev/null 2>&1 || docker network create ${VAULT_DOCKER_NETWORK:-vault-net}; docker compose --env-file .env -f docker/compose.dependencies.yaml -p tests-deps up -d; APP_DOCKERFILE=docker/Dockerfile.ci APP_COMMAND=/opt/start-ci.sh APP_RESTART_POLICY=no docker compose --env-file .env -f docker/compose.app.yaml -p tests-app up --build --abort-on-container-exit --exit-code-from app; EXIT_CODE=$?; docker compose --env-file .env -f docker/compose.app.yaml -p tests-app down -v; docker compose --env-file .env -f docker/compose.dependencies.yaml -p tests-deps down -v; exit $EXIT_CODE'",
     "release": "release-it",
     "generate:secret-key": "ts-node -r tsconfig-paths/register ./src/utils/scripts/generator.script.ts secret",
     "generate:password": "ts-node -r tsconfig-paths/register ./src/utils/scripts/generator.script.ts password",
-    "docker:dev:up": "docker compose -f docker-compose.yaml up -d maildev postgres redis",
-    "docker:app:up": "docker compose -f docker-compose.yaml up -d app",
-    "docker:dev:down": "docker compose -f docker-compose.yaml down -v maildev postgres redis",
-    "docker:app:down": "docker compose -f docker-compose.yaml down -v app",
-    "git:branch:list": "git branch -a",
-    "git:branch:update": "git remote update origin --prune",
-    "git:branch:checkout": "git checkout",
-    "git:fetch:all": "git fetch --all --prune",
-    "git:pull": "git pull",
-    "git:pull:all": "git pull --all",
-    "git:status": "git status",
-    "git:log": "git log --oneline --graph --all",
-    "git:rebase:main": "git fetch origin main && git rebase origin/main",
-    "git:rebase:continue": "git rebase --continue",
-    "commands": "npx ntl",
-    "app:kill": "sudo kill -9 $(sudo lsof -t -i:3000)",
-    "postinstall": "husky",
-    "pm2:start:dev": "pm2 start npm --name vault-dev -- run start:dev",
-    "pm2:start:swc": "pm2 start npm --name vault-dev -- run start:swc",
-    "pm2:start:prod": "pm2 start dist/main.js --name vault-prod",
-    "pm2:restart:dev": "pm2 restart vault-dev",
-    "pm2:restart:prod": "pm2 restart vault-prod",
-    "pm2:stop:dev": "pm2 stop vault-dev",
-    "pm2:stop:prod": "pm2 stop vault-prod",
-    "pm2:delete:dev": "pm2 delete vault-dev",
-    "pm2:delete:prod": "pm2 delete vault-prod",
-    "pm2:logs": "pm2 logs vault-dev",
-    "pm2:list": "pm2 list",
-    "pm2:save": "pm2 save"
+    "docker:dev:up": "bash -lc 'test -f .env || cp env-example-relational .env; docker network inspect ${VAULT_DOCKER_NETWORK:-vault-net} >/dev/null 2>&1 || docker network create ${VAULT_DOCKER_NETWORK:-vault-net}; docker compose --env-file .env -f docker/compose.dependencies.yaml up -d'",
+    "docker:app:up": "bash -lc 'test -f .env || cp env-example-relational .env; docker network inspect ${VAULT_DOCKER_NETWORK:-vault-net} >/dev/null 2>&1 || docker network create ${VAULT_DOCKER_NETWORK:-vault-net}; docker compose --env-file .env -f docker/compose.app.yaml up -d --build'",
+    "docker:dev:down": "docker compose --env-file .env -f docker/compose.dependencies.yaml down -v",
+    "docker:app:down": "docker compose --env-file .env -f docker/compose.app.yaml down -v",
+    "postinstall": "husky"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "3.864.0",
