feat(webhooks): add Striga webhook handler with signature verification and KYC/KYB mappin

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,10 +15,13 @@
     "MAXLEN",
     "mhdw",
     "Ohlcv",
+    "PAYIN",
     "pgadmin",
     "PGDATA",
     "Redlock",
+    "SEPA",
     "smembers",
+    "Striga",
     "Upserting",
     "XREADGROUP"
   ]
