--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "seed:create:relational": "hygen seeds create-relational",
     "generate:resource:relational": "hygen generate relational-resource",
     "postgenerate:resource:relational": "npm run lint -- --fix",
+    "generate:resource:relational-sub-resource": "hygen generate relational-sub-resource",
+    "postgenerate:resource:relational-sub-resource": "npm run lint -- --fix",
     "add:property:to-relational": "hygen property add-to-relational",
     "postadd:property:to-relational": "npm run lint -- --fix",
+    "add:property:to-relational-sub-resource": "hygen property add-to-relational-sub-resource",
+    "postadd:property:to-relational-sub-resource": "npm run lint -- --fix",
     "seed:run:relational": "ts-node -r tsconfig-paths/register ./src/database/seeds/relational/run-seed.ts",
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -42,11 +46,11 @@
     "docker:dev:app:up": "bash docker/scripts/dev-compose.sh up docker/compose.app.yaml -d --build",
     "docker:dev:deps:down": "bash docker/scripts/dev-compose.sh down docker/compose.dependencies.yaml -v",
     "docker:dev:app:down": "bash docker/scripts/dev-compose.sh down docker/compose.app.yaml -v",
+    "docker:dev:app:logs": "bash -lc 'bash docker/scripts/ensure-env.sh; docker compose --env-file env-example-relational --env-file .env -f docker/compose.app.yaml logs -f app'",
     "docker:dev:deps:restart": "bash docker/scripts/dev-compose.sh restart docker/compose.dependencies.yaml",
     "docker:dev:app:restart": "bash docker/scripts/dev-compose.sh restart docker/compose.app.yaml",
     "docker:dev:stop": "bash docker/scripts/dev-compose.sh stop docker/compose.app.yaml && bash docker/scripts/dev-compose.sh stop docker/compose.dependencies.yaml",
     "docker:dev:restart": "npm run docker:dev:deps:restart && npm run docker:dev:app:restart",
-    "docker:dev:refresh": "bash scripts/prod-bootstrap.sh",
     "postinstall": "husky"
   },
   "dependencies": {
