--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "docker:dev:app:up": "bash docker/scripts/dev-compose.sh up docker/compose.app.yaml -d --build",
     "docker:dev:deps:down": "bash docker/scripts/dev-compose.sh down docker/compose.dependencies.yaml -v",
     "docker:dev:app:down": "bash docker/scripts/dev-compose.sh down docker/compose.app.yaml -v",
-    "docker:dev:app:logs": "bash -lc 'bash docker/scripts/ensure-env.sh; docker compose --env-file env-example-relational --env-file .env -f docker/compose.app.yaml logs -f app'",
+    "docker:dev:app:log": "bash -lc 'bash docker/scripts/ensure-env.sh; docker compose --env-file env-example-relational --env-file .env -f docker/compose.app.yaml logs -f app'",
     "docker:dev:deps:restart": "bash docker/scripts/dev-compose.sh restart docker/compose.dependencies.yaml",
     "docker:dev:app:restart": "bash docker/scripts/dev-compose.sh restart docker/compose.app.yaml",
     "docker:dev:stop": "bash docker/scripts/dev-compose.sh stop docker/compose.app.yaml && bash docker/scripts/dev-compose.sh stop docker/compose.dependencies.yaml",
